--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,15 @@
-<label>app work!</label>
+<input type="file" (change)="onFileSelected($event)">
+<button type="button" (click)="uploadFile()">Upload</button>
+<button type="button" (click)="downloadFile()">Download</button>
+
+
+
+
+
+
+
+
+
+
+
 <router-outlet></router-outlet>
