--- a/src/app/lo-fi/lo-fi.component.html
+++ b/src/app/lo-fi/lo-fi.component.html
@@ -1,5 +1,8 @@
 <div style="height: 15vh; width: 15vw;">
-  <iframe #iframe width="100%" height="100%" src="https://www.youtube.com/embed/jfKfPfyJRdk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+  <iframe #iframe width="100%" height="100%" src="https://www.youtube.com/embed/jfKfPfyJRdk"
+    title="YouTube video player" frameborder="0"
+    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+    allowfullscreen></iframe>
 </div>
 <ul>
   <li>Hosting</li>
@@ -12,8 +15,3 @@
   <li><a href="https://firebase.google.com/docs/app-check?authuser=0">App Check</a></li>
   <li><a href="https://firebase.google.com/docs/emulator-suite?authuser=0">Emulator Suite</a></li>
 </ul>
-
-
-
-
-
