--- a/src/app/yeah/yeah.component.html
+++ b/src/app/yeah/yeah.component.html
@@ -1,21 +1,21 @@
 <div class="no-overflow">
   <iframe width="50%" style="height: 50vh;"
-    src="https://www.youtube.com/embed/MPtVZVPzzmI?si=wYMmInuXIrImKbyl&autoplay=1&loop=1&playlist=MPtVZVPzzmI&mute=1"
+    src="https://www.youtube.com/embed/MPtVZVPzzmI?si=wYMmInuXIrImKbyl&autoplay=1&loop=1&playlist=MPtVZVPzzmI&mute=1&vq=hd720"
     title="YouTube video player" frameborder="0"
     allow="autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
     referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
   <iframe width="50%" style="height: 50vh;"
-    src="https://www.youtube.com/embed/PJH2AscfsNc?si=li4gQUsCXl0N6chJ&autoplay=1&loop=1&playlist=PJH2AscfsNc&mute=1"
+    src="https://www.youtube.com/embed/PJH2AscfsNc?si=li4gQUsCXl0N6chJ&autoplay=1&loop=1&playlist=PJH2AscfsNc&mute=1&vq=hd720"
     title="YouTube video player" frameborder="0"
     allow="autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
     referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
   <iframe width="50%" style="height: 50vh;"
-    src="https://www.youtube.com/embed/qDrA2p2xSRo?si=8vep8cqCiWVtWt3P&autoplay=1&loop=1&playlist=qDrA2p2xSRo&mute=1"
+    src="https://www.youtube.com/embed/qDrA2p2xSRo?si=8vep8cqCiWVtWt3P&autoplay=1&loop=1&playlist=qDrA2p2xSRo&mute=1&vq=hd720"
     title="YouTube video player" frameborder="0"
     allow="autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
     referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
   <iframe width="50%" style="height: 50vh;"
-    src="https://www.youtube.com/embed/ASXBfG4JTAo?si=Gk1HJ_NO2pJWVv9e&autoplay=1&loop=1&playlist=ASXBfG4JTAo&mute=1"
+    src="https://www.youtube.com/embed/ASXBfG4JTAo?si=Gk1HJ_NO2pJWVv9e&autoplay=1&loop=1&playlist=ASXBfG4JTAo&mute=1&vq=hd720"
     title="YouTube video player" frameborder="0"
     allow="autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
     referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
