--- a/src/styles.sass
+++ b/src/styles.sass
@@ -1,3 +1,5 @@
-/* You can add global styles to this file, and also import other style files */
 body
   margin: 0px
+youtube-player > iframe
+  width: 50%
+  height: 50vh
