--- a/src/app/yeah/yeah.component.html
+++ b/src/app/yeah/yeah.component.html
@@ -1,4 +1,28 @@
-<div class="no-overflow">
+<div *ngIf="layoutSelectorVisibility" style="position: absolute; background-color: rgb(0 0 0); width: 50vw; height: 100%;">
+    <div class="layout-type" (click)="layoutSelection_onClick('quarter')">
+        <div class="quarter-layout-block">
+        </div>
+        <div class="quarter-layout-block">
+        </div>
+        <div class="quarter-layout-block">
+        </div>
+        <div class="quarter-layout-block">
+        </div>
+    </div>
+    <div class="layout-type" (click)="layoutSelection_onClick('heigh')">
+        <div class="heigh-layout-block">
+        </div>
+        <div class="heigh-layout-block">
+        </div>
+    </div>
+    <div class="layout-type" (click)="layoutSelection_onClick('wide')">
+        <div class="wide-layout-block">
+        </div>
+        <div class="wide-layout-block">
+        </div>
+    </div>
+</div>
+<div class="video-container">
     <!-- version 1 -->
     <!-- <iframe width="50%" style="height: 50vh;"
         src="https://www.youtube.com/embed/lFvtN2eV96M?si=wYMmInuXIrImKbyl&autoplay=1&loop=1&playlist=lFvtN2eV96M&mute=1&vq=hd720"
@@ -38,8 +62,8 @@
   </ng-container> -->
 
     <!-- version 4 -->
-    <app-youtube style="width: 50vw; height: 50vh; display: inline-block;" [exitKey]="'1'"></app-youtube>
-    <app-youtube style="width: 50vw; height: 50vh; display: inline-block;" [exitKey]="'2'"></app-youtube>
-    <app-youtube style="width: 50vw; height: 50vh; display: inline-block;" [exitKey]="'3'"></app-youtube>
-    <app-youtube style="width: 50vw; height: 50vh; display: inline-block;" [exitKey]="'4'"></app-youtube>
+    <app-youtube class="video" [exitKey]="'1'"></app-youtube>
+    <app-youtube class="video" [exitKey]="'2'"></app-youtube>
+    <app-youtube class="video" [exitKey]="'3'"></app-youtube>
+    <app-youtube class="video" [exitKey]="'4'"></app-youtube>
 </div>
