--- a/src/app/yeah/yeah.component.css
+++ b/src/app/yeah/yeah.component.css
@@ -10,9 +10,19 @@
     overflow-y: hidden;
 }
 
-.video {
-    width: calc(50% - 0px);
-    height: calc(50% - 0px);
+.video-quarter-layout {
+    width: 50%;
+    height: 50%;
+}
+
+.video-wide-layout {
+    width: 100%;
+    height: 50%;
+}
+
+.video-height-layout {
+    width: 50%;
+    height: 100%;
 }
 
 .layout-type {
@@ -48,7 +58,7 @@
     border: 1px solid rgb(90, 90, 90);
 }
 
-.heigh-layout-block {
+.height-layout-block {
     width: calc(50% - 3px);
     height: calc(100% - 2px);
     background-color: rgb(86, 127, 241);
