disable trash links

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,8 @@
 <div class="quickLink"><a href="/">home</a></div>
-<div class="quickLink"><a href="/lofi">lofi</a></div>
-<div class="quickLink"><a href="/animate">animate</a></div>
+<!-- <div class="quickLink"><a href="/lofi">lofi</a></div> -->
+<!-- <div class="quickLink"><a href="/animate">animate</a></div> -->
 <div class="quickLink"><a href="/yeah">yeah</a></div>
-<div class="quickLink"><a href="/novel">novel</a></div>
-<div class="quickLink"><a href="/ableton">ableton</a></div>
+<!-- <div class="quickLink"><a href="/novel">novel</a></div> -->
+<!-- <div class="quickLink"><a href="/ableton">ableton</a></div> -->
 <div class="quickLink"><a href="/lyrics">lyrics</a></div>
 <router-outlet></router-outlet>
